--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,15 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation("androidx.core:core-ktx:1.7.0")
     implementation("androidx.appcompat:appcompat:1.4.0")
+    implementation("androidx.fragment:fragment-ktx:1.4.0")
     implementation("com.google.android.material:material:1.4.0")
     implementation("androidx.constraintlayout:constraintlayout:2.1.2")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
