--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SpaceX">
+
+        <uses-library
+            android:name="android.test.runner"
+            android:required="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
