--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ android {
 dependencies {
     implementation("androidx.core:core-ktx:1.7.0")
     implementation("androidx.appcompat:appcompat:1.4.0")
-    implementation("androidx.fragment:fragment-ktx:1.4.0")
+    def fragment_version = "1.4.0"
+    implementation("androidx.fragment:fragment-ktx:$fragment_version")
+    debugImplementation("androidx.fragment:fragment-testing:$fragment_version")
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation("com.google.android.material:material:1.4.0")
     implementation("androidx.constraintlayout:constraintlayout:2.1.2")
@@ -48,6 +50,8 @@ dependencies {
     def lifecycle_version = "2.4.0"
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    def koin_version = "3.1.4"
+    implementation("io.insert-koin:koin-android:$koin_version")
 
     testImplementation("junit:junit:4.13.2")
     testImplementation("com.google.truth:truth:1.1.3")
@@ -60,4 +64,5 @@ dependencies {
     androidTestImplementation('com.adevinta.android:barista:4.2.0') {
         exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
     }
+    androidTestImplementation("io.insert-koin:koin-test:$koin_version")
 }
