--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id("com.android.application")
     id("kotlin-android")
+    id("shot")
 }
 
 android {
@@ -13,7 +14,7 @@ android {
         versionCode 1
         versionName "0.1"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.karumi.shot.ShotTestRunner"
     }
 
     buildTypes {
@@ -31,6 +32,11 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+    packagingOptions {
+        // some files need to be excluded
+        exclude "META-INF/LGPL2.1"
+        exclude "META-INF/AL2.0"
     }
 }
 
@@ -61,8 +67,8 @@ dependencies {
     androidTestImplementation("androidx.test:core-ktx:1.4.0")
     androidTestImplementation("androidx.test.ext:junit:1.1.3")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.4.0")
-    androidTestImplementation('com.adevinta.android:barista:4.2.0') {
-        exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
+    androidTestImplementation("com.adevinta.android:barista:4.2.0") {
+        exclude group: "org.jetbrains.kotlin" // Only if you already use Kotlin in your project
     }
     androidTestImplementation("io.insert-koin:koin-test:$koin_version")
 }
