--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,8 @@ dependencies {
     implementation("io.insert-koin:koin-android:$koin_version")
 
     testImplementation("junit:junit:4.13.2")
-    testImplementation("com.google.truth:truth:1.1.3")
+    def truth_version = "1.1.3"
+    testImplementation("com.google.truth:truth:$truth_version")
     testImplementation("com.squareup.okhttp3:mockwebserver:4.9.3")
     testImplementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     testImplementation("io.insert-koin:koin-test:$koin_version")
@@ -76,5 +77,9 @@ dependencies {
         exclude group: "org.jetbrains.kotlin" // Only if you already use Kotlin in your project
     }
     androidTestImplementation("io.insert-koin:koin-test:$koin_version")
+    androidTestImplementation("com.google.truth:truth:$truth_version")
+    androidTestImplementation("com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework:3.1.2") {
+        because("issue workaround https://github.com/android/android-test/issues/861#issuecomment-952431166 when using Truth")
+    }
     androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
 }
