--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        nav_version = "2.3.5"
+    }
     repositories {
         google()
         mavenCentral()
@@ -7,6 +10,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:7.0.4")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
         classpath("com.karumi:shot:5.12.2")
 
         // NOTE: Do not place your application dependencies here; they belong
